--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,7 @@ h1, h2, h3, h4, h5, h6, ul {
 .new_gamer {
     height:50px;
     background-color:white;
+    cursor:pointer;
 }
 
 /**PLAYER IMAGES**/
